--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/passport": "^12.4",
+        "laravel/sanctum": "^4.0",
+        "laravel/tinker": "^2.9",
+        "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
